--- a/src/app/modules/event/event-list/event-list.component.html
+++ b/src/app/modules/event/event-list/event-list.component.html
@@ -1,3 +1,24 @@
+<div class="container">
+  <h2>Listado de eventos</h2>
+  <table class="table table-striped table-dark">
+    <thead>
+      <tr>
+        <th scope="col">Nombre</th>
+        <th scope="col">Lugar</th>
+        <th scope="col">Fecha</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>dato</td>
+        <td>dato</td>
+        <td>dato</td>
+      </tr>
+    </tbody>
+  </table>
+</div>
+
+
 <ng-template #testModal let-modal>
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
