--- a/src/app/modules/event/event-dashboard/event-dashboard.component.html
+++ b/src/app/modules/event/event-dashboard/event-dashboard.component.html
@@ -6,5 +6,28 @@
     </p>
   </div>
 </div>
+<div class="container">
+  <div class="row">
+    <h2 class="ml-4">Listado de eventos</h2>
+    <button class="btn btn-success ml-3" (click)="showModal()">Nuevo Evento</button>
+  </div>
+  <div class="mt-3">
+    <app-event-list ></app-event-list>
+  </div>
+</div>
 
-<app-event-list></app-event-list>
+<ng-template #createEvent let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">Crear Evento</h4>
+  </div>
+  <div class="modal-body">
+    <!-- <form>
+      <div class="form-group">
+        <label for="dateOfBirth">Date of birth</label>
+      </div>
+    </form> -->
+    <app-event-create-form (submitEvent)="closeModalForm($event)"></app-event-create-form>
+    <!-- <button (click)="closeModal()">close</button> -->
+  </div>
+</ng-template>
+<button (click)="showModal()">mostrar</button>
