--- a/src/app/modules/event/event-list/event-list.component.html
+++ b/src/app/modules/event/event-list/event-list.component.html
@@ -1,5 +1,4 @@
 <div class="container">
-  <h2>Listado de eventos</h2>
   <table class="table table-striped table-dark">
     <thead>
       <tr>
@@ -9,16 +8,16 @@
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>dato</td>
-        <td>dato</td>
-        <td>dato</td>
+      <tr *ngFor="let event of events">
+        <td>{{event.name}}</td>
+        <td>{{event.address}}, {{event.state}}, {{event.province}}</td>
+        <td>{{event.dayAndTime | date: 'shortDate'}}</td>
       </tr>
     </tbody>
   </table>
 </div>
 
-
+<!--
 <ng-template #testModal let-modal>
   <div class="modal-header">
     <h4 class="modal-title" id="modal-basic-title">Profile update</h4>
@@ -31,5 +30,5 @@
     </form>
     <button (click)="closeModal()">close</button>
   </div>
-</ng-template>
-<button (click)="showModal()">mostrar</button>
+</ng-template> -->
+<!-- <button (click)="showModal()">mostrar</button> -->
