--- a/src/app/modules/event/event-create-form/event-create-form.component.html
+++ b/src/app/modules/event/event-create-form/event-create-form.component.html
@@ -1,52 +1,70 @@
 <form [formGroup]="form"  (ngSubmit)="submitForm()">
-  <div class="form-group">
-    <label for="name">Nombre:</label>
-    <input formControlName="name" type="text" class="form-control" id="nombre" aria-describedby="nombre">
+  <div class="row">
+    <div class="col form-group">
+      <label for="name">Nombre:</label>
+      <input formControlName="name" type="text" class="form-control" id="nombre" aria-describedby="nombre">
+    </div>
   </div>
-  <div class="form-group">
-    <label for="address">Direcci&oacute;n:</label>
-    <input formControlName="address" type="text" class="form-control" id="address">
+  <div class="row">
+    <div class="col form-group">
+      <label for="address">Direcci&oacute;n:</label>
+      <input formControlName="address" type="text" class="form-control" id="address">
+    </div>
+    <div class="col form-group">
+      <label for="city">Ciudad:</label>
+      <input formControlName="city" type="text" class="form-control" id="city">
+    </div>
   </div>
-  <div class="form-group">
-    <label for="province">Provincia:</label>
-    <input formControlName="province" type="text" class="form-control" id="province">
+  <div class="row">
+    <div class="col form-group">
+      <label for="province">Provincia:</label>
+      <input formControlName="province" type="text" class="form-control" id="province">
+    </div>
+    <div class="col form-group">
+      <label for="zipCode">C&oacute;digo postal:</label>
+      <input formControlName="zipCode" type="text" class="form-control" id="zipCode">
+    </div>
   </div>
-  <div class="form-group">
-    <label for="zipCode">C&oacute;digo postal:</label>
-    <input formControlName="zipCode" type="text" class="form-control" id="zipCode">
+  <div class=row>
+    <div class="col form-group">
+      <label for="state">Pa&iacute;s:</label>
+      <input formControlName="state" type="text" class="form-control" id="state">
+    </div>
+    <div class="col form-group">
+      <label for="latitud">Latitud:</label>
+      <input formControlName="latitud" type="number" class="form-control" id="latitud">
+    </div>
   </div>
-  <div class="form-group">
-    <label for="state">Pa&iacute;s:</label>
-    <input formControlName="state" type="text" class="form-control" id="state">
+  <div class="row">
+    <div class="col form-group">
+      <label for="longitud">Longitud:</label>
+      <input formControlName="longitud" type="number" class="form-control" id="longitud">
+    </div>
+    <div class="col form-group">
+      <label for="mail">Email de contacto:</label>
+      <input formControlName="mail" type="text" class="form-control" id="mail">
+    </div>
   </div>
-  <div class="form-group">
-    <label for="latitud">Latitud:</label>
-    <input formControlName="latitud" type="number" class="form-control" id="latitud">
+  <div class="row">
+    <div class="col form-group">
+      <label for="phone">Tel&eacute;fono:</label>
+      <input formControlName="phone" type="text" class="form-control" id="phone">
+    </div>
+    <div class="col form-group">
+      <label for="description">Descripci&oacute;n:</label>
+      <input formControlName="description" type="text" class="form-control" id="description">
+    </div>
   </div>
-  <div class="form-group">
-    <label for="longitud">Longitud:</label>
-    <input formControlName="longitud" type="number" class="form-control" id="longitud">
-  </div>
-  <div class="form-group">
-    <label for="mail">Email de contacto:</label>
-    <input formControlName="mail" type="text" class="form-control" id="mail">
-  </div>
-  <div class="form-group">
-    <label for="phone">Tel&eacute;fono:</label>
-    <input formControlName="phone" type="text" class="form-control" id="phone">
-  </div>
-  <div class="form-group">
-    <label for="description">Descripci&oacute;n:</label>
-    <input formControlName="description" type="text" class="form-control" id="description">
-  </div>
-  <div class="form-group">
-    <label for="dayAndTime">Fecha:</label>
-    <input formControlName="dayAndTime" type="date" class="form-control" id="dayAndTime">
-  </div>
-  <div class="form-group">
-    <label for="payment">Pago:</label>
-    <input formControlName="payment" type="text" class="form-control" id="payment">
+  <div class="row">
+    <div class="col form-group">
+      <label for="dayAndTime">Fecha:</label>
+      <input formControlName="dayAndTime" type="date" class="form-control" id="dayAndTime">
+    </div>
+    <div class="col form-group">
+      <label for="payment">Pago:</label>
+      <input formControlName="payment" type="text" class="form-control" id="payment">
+    </div>
   </div>
   <button type="submit" class="btn btn-primary">Submit</button>
-  <button type="button" (click)="closeModal()">close</button>
 </form>
+<button type="button" class="btn ml-3 btn-secondary" (click)="closeModal()">close</button>
