--- a/src/app/modules/foodtrucker/foodtrucker-dashboard/foodtrucker-dashboard.component.html
+++ b/src/app/modules/foodtrucker/foodtrucker-dashboard/foodtrucker-dashboard.component.html
@@ -1,4 +1,4 @@
-<!-- <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="#">Food & Events</a>
   <button
     class="navbar-toggler"
@@ -18,9 +18,10 @@
           <span class="sr-only">(current)</span>
         </a>
       </li>
-      <li class="nav-item">
-        <a class="nav-link" routerLink="/events" style="cursor: pointer;">
-          Eventos
+    <li class="nav-item">
+      <!-- routerLink="/truckForm" -->
+        <a class="nav-link" (click)="goToForm()" style="cursor: pointer;">
+          Mi Truck
         </a>
       </li>
       <li class="nav-item">
@@ -33,5 +34,5 @@
       Amamos los eventos y la comida
     </span>
   </div>
-</nav> -->
-<router-outlet></router-outlet>
+</nav>
+<app-home></app-home>
