--- a/src/app/modules/foodtrucker/foodtrucker-dashboard/foodtrucker-dashboard.component.html
+++ b/src/app/modules/foodtrucker/foodtrucker-dashboard/foodtrucker-dashboard.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Food & Events</a>
+  <a class="navbar-brand"(click)="goToFoodTruckerHome()" style="cursor: pointer;">Food & Events</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -13,22 +13,22 @@
   <div class="collapse navbar-collapse" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="#">
+        <a class="nav-link" (click)="goToFoodTruckerHome()" style="cursor:pointer;">
           Home
           <span class="sr-only">(current)</span>
         </a>
       </li>
-    <li class="nav-item">
+      <li class="nav-item active">
+        <a class="nav-link" (click)="closeSesion()" style="cursor:pointer;">
+          Cerrar Sesion
+        </a>
+      </li>
       <!-- routerLink="/truckForm" -->
+    <!-- <li class="nav-item">
         <a class="nav-link" (click)="goToForm()" style="cursor: pointer;">
           Mi Truck
         </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="#">
-          Pricing
-        </a>
-      </li>
+      </li> -->
     </ul>
     <span class="navbar-text">
       Amamos los eventos y la comida
