--- a/src/app/modules/eventplanner/home-event-planner/home-event-planner.component.html
+++ b/src/app/modules/eventplanner/home-event-planner/home-event-planner.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <p class="navbar-brand">Food & Events</p>
+  <a class="navbar-brand">Food & Events</a>
   <button
     class="navbar-toggler"
     type="button"
@@ -35,4 +35,4 @@
     </span>
   </div>
 </nav>
-<app-event-list></app-event-list>
+<app-event-dashboard></app-event-dashboard>
