--- a/src/app/modules/foodtrucker/home/home.component.html
+++ b/src/app/modules/foodtrucker/home/home.component.html
@@ -23,6 +23,6 @@
     <h5 *ngIf="!truck.id" >Usted aun no cargo su truck</h5>
   </div>
   <div class="modal-body">
-    <app-truck-form [truck]="truck" (editEvent)="edit($event)"  (submitEvent)="submitCreate($event)" (closeEvent)="closeModal($event)"></app-truck-form>
+    <app-truck-form [truck]="truck" (deleteEvent)="delete($event)" (editEvent)="edit($event)"  (submitEvent)="submitCreate($event)" (closeEvent)="closeModal($event)"></app-truck-form>
   </div>
 </ng-template>
